--- a/src/robodusty.css
+++ b/src/robodusty.css
@@ -53,12 +53,28 @@ li.track {
 	list-style: none;
 	background: #126180;
 	height: 35px;
-	line-height: 35px;
+	/*line-height: 35px;*/
 	margin: 5px;
 	cursor: pointer;
 	color: #FFF;
+	position: relative;
 }
-.button {
+li.track.selected {
+	/*border: 2px solid gray;*/
+}
+li.track .arrow {
+	position: absolute;
+	background: url("images/ui-icons_888888_256x240.png") -34px -17px no-repeat;
+	width: 12px;
+	height: 12px;
+	top: 20px;
+	right: -12px;
+	display: none;
+}
+li.track.selected .arrow {
+	display: block;
+}
+.button, .tm-btn {
 	background: green;
 	height: 35px;
 	line-height: 35px;
@@ -88,12 +104,11 @@ li .name {
 	margin-left: 40px;
 }
 .tm-btn {
-	width: 100px;
-	height: 30px;
 	background: green;
 	margin: 5px;
 	display: none;
 	cursor: pointer;
+	width: 190px;
 }
 #tm-back {
 	background: orange;
@@ -102,6 +117,7 @@ li .name {
 /* IEM stuff */
 #displayIem {
 	overflow-y: hidden;
+	position: relative;
 }
 #displayIem > ol {
 	list-style: none;
@@ -114,12 +130,25 @@ li .name {
 	line-height: 35px;
 	font-size: 11px;
 	overflow: hidden;
+	position: relative;
+}
+
+.updated {
+	font-size: 10px;
+	text-align: center;
 }
 
 #displayIem li.even {
 	background: #D3D3D3;
 }
 
+#displayIem li.SVR { background: #FFFF00; }
+#displayIem li.TOR { background: #FF0000; }
+/*#displayIem li.SVR span.iemMessage, #displayIem li.TOR span.iemMessage {
+	left: 6px;
+}*/
+
 #displayIem span.iemMessage {
-	margin-right: 10px;
+	position: relative;
+	left: 10px;
 }
