--- a/src/css/robodusty.css
+++ b/src/css/robodusty.css
@@ -10,6 +10,14 @@ html, body {
 	user-select: none;
 	font-family: 'Varela Round';
 }
+#overlay {
+	display: none;
+	opacity: .8;
+	background: #000;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
 .shadow {
 	-moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
 	-webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -25,17 +33,24 @@ ul {
 	background: #FFF;
 	float: left;
 }
+#removeTrack {
+	z-index: 1;
+	position: relative;
+}
 #status {
 	height: 200px;
 	background: #FFF;
 }
+#config { background: #CCC; cursor: default; }	/* Temporary until we add functionality */
 #display {
 	float: left;
 	height: 100%;
 	background: #FFF;
 }
-.track {
-	padding: 10px;
+#display .track {
+	left: 10px;
+	top: 10px;
+	position: relative;
 }
 #trackMenu {
 	background: red;
@@ -58,6 +73,7 @@ li.track {
 	cursor: pointer;
 	color: #FFF;
 	position: relative;
+	z-index: 1;	/* So buttons can appear above the overlay in remove mode */
 }
 li.track.selected {
 	background: #126180;
@@ -67,7 +83,7 @@ li.track .arrow {
 	background: url("images/ui-icons_888888_256x240.png") -34px -17px no-repeat;
 	width: 12px;
 	height: 12px;
-	top: 20px;
+	top: 10px;
 	right: -12px;
 	display: none;
 }
@@ -109,6 +125,7 @@ li .name {
 	display: none;
 	cursor: pointer;
 	width: 190px;
+	float: left;
 }
 #tm-back {
 	background: orange;
@@ -144,9 +161,6 @@ li .name {
 
 #displayIem li.SVR { background: #FFFF00; }
 #displayIem li.TOR { background: #FF0000; }
-/*#displayIem li.SVR span.iemMessage, #displayIem li.TOR span.iemMessage {
-	left: 6px;
-}*/
 
 #displayIem span.iemMessage {
 	position: relative;
