--- a/src/css/robodusty.css
+++ b/src/css/robodusty.css
@@ -1,7 +1,7 @@
+html, body, #map-canvas {
+	height: 100%; margin: 0; padding: 0;
+}
 html, body {
-	height: 100%;
-	margin: 0;
-	padding: 0;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
@@ -9,6 +9,11 @@ html, body {
 	-ms-user-select: none;
 	user-select: none;
 	font-family: 'Varela Round';
+}
+#map-canvas: {
+	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 #overlay {
 	display: none;
@@ -42,6 +47,8 @@ ul {
 	background: #FFF;
 }
 #config { background: #CCC; cursor: default; }	/* Temporary until we add functionality */
+
+
 #display {
 	float: left;
 	height: 100%;
@@ -57,7 +64,6 @@ ul {
 	height: 100%;
 	display: none;
 }
-canvas { display: none; }
 #tracksLabel {
 	margin: 5px;
 	text-align: center;
@@ -100,6 +106,7 @@ li.track.selected .arrow {
 	cursor: pointer;
 	color: #FFF;
 }
+
 #clock {
 	height: 35px;
 	line-height: 35px;
